--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-pino-logger": "^2.1.3",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.3.14"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
     "eslint": "^5.9.0",
     "eslint-config-kasa": "^0.1.3",
-    "jest": "^23.6.0",
-    "jest-junit": "^5.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.7",
+    "sinon": "^7.1.1",
     "supertest": "^3.3.0"
   },
   "scripts": {
     "contentserver": "node src/app/contentserver/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
