--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "contentserver": "node src/app/contentserver/index.js",
+    "dev" : "nodemon src/app/contentserver/index.js",
     "test": "mocha \"src/**/*.test.js\""
   },
   "repository": {
