--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "koa-bodyparser": "^4.2.1",
     "koa-pino-logger": "^2.1.3",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.3.14"
+    "mongoose": "^5.3.14",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "contentserver": "node src/app/contentserver/index.js",
-    "dev" : "nodemon src/app/contentserver/index.js",
+    "dev": "nodemon src/app/contentserver/index.js",
     "test": "mocha \"src/**/*.test.js\""
   },
   "repository": {
