--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "koa-pino-logger": "^2.1.3",
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.14",
-    "slugify": "^1.3.4"
+    "slug": "^0.9.3",
+    "slugify": "^1.3.4",
+    "speakingurl": "^14.0.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
