--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,5 +4,5 @@ steps:
 - name: 'gcr.io/cloud-builders/yarn'
   args: ['run', 'test']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag=gcr.io/leafy-grammer-222414/baglava', '.']  
-images: ['gcr.io/leafy-grammar-222414/baglava']
+  args: ['build', '--tag=gcr.io/leafy-grammar-222414/baglava:latest', '.']  
+images: ['gcr.io/leafy-grammar-222414/baglava:latest']
