trying to fix cc-test-reporter run issue

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,13 +14,13 @@ steps:
 - name: 'ubuntu'
   args: ['chmod', '+x', 'cc-test-reporter']
 - name: 'ubuntu'
-  args: ['./cc-test-reporter', 'before-build']
+  args: ['cc-test-reporter', 'before-build']
   env:
   - 'CC_TEST_REPORTER_ID=be09c878390676aa4f4dcbc03853cb8dab1bf8e1cc66d40f09293d66982d81b5'
 - name: 'gcr.io/cloud-builders/yarn'
   args: ['run', 'test-with-coverage']
 - name: 'ubuntu'
-  args: ['./cc-test-reporter', 'after-build']
+  args: ['cc-test-reporter', 'after-build']
   env:
   - 'CC_TEST_REPORTER_ID=be09c878390676aa4f4dcbc03853cb8dab1bf8e1cc66d40f09293d66982d81b5'
 images: ['gcr.io/leafy-grammar-222414/baglava:latest']
