--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-pino-logger": "^2.1.3",
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.14",
+    "nyc": "^13.1.0",
     "slug": "^0.9.3",
     "slugify": "^1.3.4",
     "speakingurl": "^14.0.1"
@@ -27,7 +28,8 @@
   "scripts": {
     "contentserver": "node src/app/contentserver/index.js",
     "dev": "nodemon src/app/contentserver/index.js",
-    "test": "mocha \"src/**/*.test.js\""
+    "test": "mocha \"src/**/*.test.js\"",
+    "test-with-coverage": "nyc --reporter lcov mocha \"src/**/*.test.js\""
   },
   "repository": {
     "type": "git",
