--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,7 @@
 steps:
 # Installing dependencies
 - name: 'gcr.io/cloud-builders/git'
-  entrypoint: 'sh'
-  args: ['env']
+  entrypoint: 'env'
 - name: 'gcr.io/cloud-builders/yarn'
   args: ['install']
 # Running tests
