added substitutions for ci build env and commit in cloudbuild.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,10 @@ steps:
   - 'CC_TEST_REPORTER_ID=be09c878390676aa4f4dcbc03853cb8dab1bf8e1cc66d40f09293d66982d81b5'
   - 'GIT_COMMIT_SHA=$COMMIT_SHA'
   - 'GIT_BRANCH=$BRANCH_NAME'
+  - 'GIT_COMMITED_AT=1546874761'
+  - 'CI_NAME=CloudBuild'
+  - 'CI_BUILD_ID=$BUILD_ID'
+  - 'CI_BUILD_URL=https://console.cloud.google.com/cloud-build/builds/$BUILD_ID'
 - name: 'gcr.io/cloud-builders/yarn'
   args: ['run', 'test-with-coverage']
 - name: 'gcr.io/cloud-builders/git'
@@ -29,4 +33,8 @@ steps:
   - 'CC_TEST_REPORTER_ID=be09c878390676aa4f4dcbc03853cb8dab1bf8e1cc66d40f09293d66982d81b5'
   - 'GIT_COMMIT_SHA=$COMMIT_SHA'
   - 'GIT_BRANCH=$BRANCH_NAME'
+  - 'GIT_COMMITED_AT=1546874761'
+  - 'CI_NAME=CloudBuild'
+  - 'CI_BUILD_ID=$BUILD_ID'
+  - 'CI_BUILD_URL=https://console.cloud.google.com/cloud-build/builds/$BUILD_ID'
 images: ['gcr.io/leafy-grammar-222414/baglava:latest']
