--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.14",
     "nyc": "^13.1.0",
+    "promise-mysql": "^3.3.1",
     "slug": "^0.9.3",
     "slugify": "^1.3.4",
     "speakingurl": "^14.0.1"
