--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-pino-logger": "^2.1.3",
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.14",
+    "mysql2": "^1.6.4",
     "nyc": "^13.1.0",
     "promise-mysql": "^3.3.1",
     "slug": "^0.9.3",
