--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-pino-logger": "^2.1.3",
     "koa-router": "^7.4.0",
+    "koa-views": "^6.1.5",
     "mongoose": "^5.3.14",
     "mysql2": "^1.6.4",
     "nyc": "^13.1.0",
