--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "ATS",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "config": "^3.0.0",
     "joi": "^14.3.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-passport": "^4.1.1",
     "koa-pino-logger": "^2.1.3",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.10.1",
     "koa-views": "^6.1.5",
     "mongoose": "^5.3.14",
     "mysql2": "^1.6.4",
     "nyc": "^13.1.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "promise-mysql": "^3.3.1",
     "slug": "^0.9.3",
     "slugify": "^1.3.4",
