--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-passport": "^4.1.1",
     "koa-pino-logger": "^2.1.3",
+    "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
     "koa-views": "^6.1.5",
