--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "contentserver": "node src/app/contentserver/index.js",
     "dev": "nodemon src/app/contentserver/index.js",
+    "nodemon-test": "nodemon --exec \"mocha \"src/**/*.test.js\"\"",
     "test": "mocha \"src/**/*.test.js\"",
     "test-with-coverage": "nyc --reporter lcov mocha \"src/**/*.test.js\""
   },
